Little fix filter count wasn't visible

--- a/src/app/components/art/search/filter-form/filter-form.component.scss
+++ b/src/app/components/art/search/filter-form/filter-form.component.scss
@@ -27,9 +27,10 @@ span.mr-suboption-filter {
 
 .filter-input-container {
   // @apply flex flex-col gap-1;
-  @apply relative;
+  @apply relative overflow-visible;
 }
 
 .filter-results-count {
-  @apply text-xs text-black-100 px-2 select-none dark:text-white-300 ml-2 absolute right-0 -top-2 rounded-full bg-main-300 dark:bg-main-600 flex items-center justify-center;
+  @apply text-xs text-black-100 px-2 select-none dark:text-white-300 ml-2 absolute right-1 top-1 rounded-full bg-main-300 dark:bg-main-600 flex items-center justify-center;
+  z-index: 10;
 }
